revised some code