@@ -161,22 +161,22 @@ public class NativeMethodInfo extends MethodInfo {
 						nativeFrame.setReturnValue(ret);
 						nativeFrame.setReturnAttr(env.getReturnAttribute());
 
-						return nativeFrame.getPC().mapf(FeatureExprFactory.True(), new BiFunction<FeatureExpr, Instruction, Conditional<Instruction>>() {
+						return nativeFrame.getPC().mapf(ctx, new BiFunction<FeatureExpr, Instruction, Conditional<Instruction>>() {
 
 							@Override
 							public Conditional<Instruction> apply(FeatureExpr f, Instruction y) {
-								if (Conditional.isContradiction(f.and(ctx))) {
+								if (Conditional.isContradiction(f)) {
 									return new One<>(y);
 								}
-								if (f.and(ctx).isTautology()) {
+								if (f.isTautology()) {
 									return new One<>(y.getNext());
 								}
-								if (f.equivalentTo(f.and(ctx))) {
-									return new One<>(y.getNext());
-								}
-								if (f.equivalentTo(f.andNot(ctx))) {
-									return new One<>(y);
-								}
+//								if (f.equivalentTo(f.and(ctx))) {
+//									return new One<>(y.getNext());
+//								}
+//								if (f.equivalentTo(f.andNot(ctx))) {
+//									return new One<>(y);
+//								}
 								return new Choice<>(ctx, new One<>(y.getNext()), new One<>(y));
 							}
 
@@ -293,7 +293,7 @@ public class NativeMethodInfo extends MethodInfo {
       case Types.T_DOUBLE:
         lval = caller.peekLong(FeatureExprFactory.True(), stackOffset).getValue();
         stackOffset++; // 2 stack words
-        a[j] = new Double(Types.longToDouble(lval));
+        a[j] = Double.valueOf(Types.longToDouble(lval));
 
         break;
 
